댓글창추가

--- a/_config.yml
+++ b/_config.yml
@@ -146,10 +146,14 @@ defaults:
       sitemap: false
 
   # # You can use the following to enable comments on all posts.
-  # - scope:
-  #     type:            posts
-  #   values:
-  #     comments:        true
+  - scope:
+      type: posts
+    values:
+      comments:
+      active: utterances
+      utterances:
+        repo: PJeongHye/PJeongHye.github.io
+        issue_term: pathname
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
