댓글창 수정

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ paginate_path: /:num/
 # ---------------------------------------------------------------------------------------
 
 # This will use the gem `jekyll-theme-hydejack`, as defined in the sibling `Gemfile`.
-#theme: jekyll-theme-hydejack
+theme: jekyll-theme-hydejack
 
 # You can uncomment `theme` above and replace it with `remote_theme` here iff you are using the
 # `jekyll-remote-theme` plugin (which is the case when using the legacy GitHub Pages pipeline).
@@ -146,14 +146,10 @@ defaults:
       sitemap: false
 
   # # You can use the following to enable comments on all posts.
-  - scope:
-      type: posts
-    values:
-      comments:
-      active: utterances
-      utterances:
-        repo: PJeongHye/PJeongHye.github.io
-        issue_term: pathname
+  # - scope:
+  #     type:            posts
+  #   values:
+  #     comments:        true
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
