--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ remote_theme: hydecorp/hydejack@v9
 
 # Sidebar image and theme color of the site.
 accent_image: /assets/img/sidebar-bg.gif
-accent_color: rgb(86,193,51)
+accent_color: rgb(54,188,155)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
@@ -125,7 +125,7 @@ defaults:
   - scope:
       path: hyde/
     values:
-      accent_color: rgb(86,193,51)
+      accent_color: rgb(54,188,155)
       theme_color: rgb(32,32,32)
       accent_image:
         background: rgb(32,32,32)
@@ -209,7 +209,7 @@ hydejack:
 
   # Set to `true` if you don't intend on changing the accent color on a per-page basis.
   # This will increase site build speed!
-  no_page_style: false
+  no_page_style: true
 
   # Code blocks and tables "break" the layout by spanning the full available width.
   # Set this to true if you want them to be the same width as other content.
